src/objects/Proposal__c.object
<CustomObject>
    <fields>
        <fullName>Broker_Coop__c</fullName>
        <label>Broker Coop %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Broker_Proposed_CAP__c</fullName>
        <label>Broker Proposed CAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Broker_Proposed_Price__c</fullName>
        <label>Broker Proposed Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proposals</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Proposals</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <inlineHelpText>Please estimate for pipeline tracking purposes</inlineHelpText>
        <label>Commission ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <formula>Client__r.Account.Name</formula>
        <label>system.client company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Appointment__c</fullName>
        <label>Date of First Appointment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Proposal_Appointment__c</fullName>
        <label>Date Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Received__c</fullName>
        <label>Due Diligence Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>List_Probability__c</fullName>
        <defaultValue>0.15</defaultValue>
        <inlineHelpText>What is the probability of this proposal closing?</inlineHelpText>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OSF_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other Broker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Proposals (Other Broker)</relationshipLabel>
        <relationshipName>Proposals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Proposals</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Image__c</fullName>
        <formula>Property__r.Report_Image__c</formula>
        <label>Report Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sell_Probability__c</fullName>
        <label>Sell Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Seller_Price_Expectation__c</fullName>
        <label>Seller Price Expectation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Waiting for Books &amp; Records</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Dead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting to be Presented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Won__c</fullName>
        <formula>IF( TEXT(Status__c)= &quot;Won&quot;, True, False)</formula>
        <label>Won</label>
        <type>Checkbox</type>
    </fields>
    <label>Proposal</label>
    <listViews>
        <fullName>Active_Proposals</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Date_of_First_Appointment__c</columns>
        <columns>Date_of_Proposal_Appointment__c</columns>
        <columns>Due_Diligence_Received__c</columns>
        <columns>Seller_Price_Expectation__c</columns>
        <columns>Broker_Proposed_Price__c</columns>
        <columns>List_Probability__c</columns>
        <columns>Sell_Probability__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Waiting for Books &amp; Records,Working,Waiting to be Presented,Presented</value>
        </filters>
        <label>Active Proposals</label>
    </listViews>
    <listViews>
        <fullName>All_Proposals</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Date_of_First_Appointment__c</columns>
        <columns>Date_of_Proposal_Appointment__c</columns>
        <columns>Due_Diligence_Received__c</columns>
        <columns>Seller_Price_Expectation__c</columns>
        <columns>Broker_Proposed_Price__c</columns>
        <columns>List_Probability__c</columns>
        <columns>Sell_Probability__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Proposals</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Dead_Proposals</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Date_of_First_Appointment__c</columns>
        <columns>Date_of_Proposal_Appointment__c</columns>
        <columns>Due_Diligence_Received__c</columns>
        <columns>Seller_Price_Expectation__c</columns>
        <columns>Broker_Proposed_Price__c</columns>
        <columns>List_Probability__c</columns>
        <columns>Sell_Probability__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Dead</value>
        </filters>
        <label>Dead Proposals</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Listed_Proposals</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Date_of_First_Appointment__c</columns>
        <columns>Date_of_Proposal_Appointment__c</columns>
        <columns>Due_Diligence_Received__c</columns>
        <columns>Seller_Price_Expectation__c</columns>
        <columns>Broker_Proposed_Price__c</columns>
        <columns>List_Probability__c</columns>
        <columns>Sell_Probability__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Listed</value>
        </filters>
        <label>Listed Proposals</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Not_Listed_Proposals</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Date_of_First_Appointment__c</columns>
        <columns>Date_of_Proposal_Appointment__c</columns>
        <columns>Due_Diligence_Received__c</columns>
        <columns>Seller_Price_Expectation__c</columns>
        <columns>Broker_Proposed_Price__c</columns>
        <columns>List_Probability__c</columns>
        <columns>Sell_Probability__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Listed</value>
        </filters>
        <label>Not Listed Proposals</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Proposal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proposals</pluralLabel>
    <recordTypes>
        <fullName>Buyer_Representation</fullName>
        <active>true</active>
        <label>Buyer Representation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Landlord_Representation</fullName>
        <active>true</active>
        <label>Landlord Representation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Seller_Representation</fullName>
        <active>true</active>
        <label>Seller Representation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tenant_Representation</fullName>
        <active>true</active>
        <label>Tenant Representation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>